# worker-informer

./: .gitignore  .gitmodules  ChangeLog  DEBUG.sh  Makefile.am  config.xml  configure.ac
db_dump/: GEO  GEO_NOT_FOUND
db_dump/requests/: getCampaings.sql  getInformer.sql
db_dump/tables/: 00_Campaign.sql  03_Categories.sql  04_Categories2Domain.sql  04_Categories2Informer.sql  05_Campaign2Informer.sql  06_Accounts.sql  07_Campaign2Accounts.sql  09_Campaign2Domains.sql  10_CronCampaign.sql  11_Device.sql  12_Campaign2Device.sql  13_geoTargeting.sql  16_Informer.sql  20_Campaign2Categories.sql  21_GeoLiteCity.sql
include/: BaseCore.h  Campaign.h  CgiService.h  Config.h  Core.h  Core_DataBase.h  Informer.h  Params.h  ParentDB.h
src/: BaseCore.cpp  Campaign.cpp  CgiService.cpp  Config.cpp  Core.cpp  Core_DataBase.cpp  DB.cpp  DataBase.cpp  Informer.cpp  Params.cpp  ParentDB.cpp
template/: error.html  rg.cache  rg.js  storage.js  teaser.html  teaser.html.debug
