ACLOCAL_AMFLAGS = -I m4

SRC_ALL=src/base64.cpp \
		src/Core.cpp \
		src/Log.cpp \
		src/BaseCore.cpp \
		src/DataBase.cpp \
		src/Informer.cpp \
		src/main.cpp \
		src/Server.cpp \
		src/CgiService.cpp \
		src/EBranch.cpp \
		src/UrlParser.cpp \
		src/Config.cpp \
		src/Params.cpp \
		src/Cookie.cpp \
		src/ParentDB.cpp \
		src/BoostHelpers.cpp \
		src/Core_DataBase.cpp \
		src/CpuStat.cpp 

CMN_CPPFLAGS=-std=c++11 $(SQL_CFLAGS) $(MONGO_CFLAGS) -Iinclude -DSQLITE_THREADSAFE=1  -DSQLITE_ENABLE_RTREE -DSQLITE_ENABLE_COLUMN_METADATA=1 -DSQLITE_DEFAULT_MEMSTATUS=0 -D_REENTRANT=1 -DHAVE_FDATASYNC=1 -DHAVE_USLEEP=1 -DHAVE_LOCALTIME_R=1 -DHAVE_GMTIME_R=1 -DHAVE_DECL_STRERROR_R=1 -DHAVE_STRERROR_R=1 -DHAVE_READLINE=1 -DHAVE_POSIX_FALLOCATE=1 
CMN_CFLAGS= -Iinclude -DSQLITE_THREADSAFE=1  -DSQLITE_ENABLE_RTREE -DSQLITE_ENABLE_COLUMN_METADATA=1 -DSQLITE_DEFAULT_MEMSTATUS=0 -D_REENTRANT=1 -DHAVE_FDATASYNC=1 -DHAVE_USLEEP=1 -DHAVE_LOCALTIME_R=1 -DHAVE_GMTIME_R=1 -DHAVE_DECL_STRERROR_R=1 -DHAVE_STRERROR_R=1 -DHAVE_READLINE=1 -DHAVE_POSIX_FALLOCATE=1
CMN_LDADD = $(BOOST_DATE_TIME_LIBS) $(BOOST_FILESYSTEM_LIBS) $(BOOST_THREAD_LIBS) $(BOOST_SYSTEM_LIBS) $(BOOST_REGEX_LIBS) $(MONGO_LIBS) $(SQL_LIBS)

if DEBUG
bin_PROGRAMS = worker-informer-dev
worker_informer_dev_SOURCES=$(SRC_ALL)
worker_informer_dev_CPPFLAGS=$(CMN_CPPFLAGS)
worker_informer_dev_CPPFLAGS=$(CMN_CPPFLAGS)
worker_informer_dev_LDADD=$(CMN_LDADD)
else
bin_PROGRAMS = worker-informer
worker_informer_SOURCES=$(SRC_ALL)
worker_informer_CPPFLAGS=$(CMN_CPPFLAGS)
worker_informer_CPPFLAGS=$(CMN_CPPFLAGS)
worker_informer_LDADD=$(CMN_LDADD)
endif

if DEBUG
AM_CFLAGS = -g -DDEBUG -Wall -pipe -DSQLITE_THREADSAFE=1  -DSQLITE_ENABLE_RTREE -DSQLITE_ENABLE_COLUMN_METADATA=1 -DSQLITE_DEFAULT_MEMSTATUS=0 -D_REENTRANT=1 -DHAVE_FDATASYNC=1 -DHAVE_USLEEP=1 -DHAVE_LOCALTIME_R=1 -DHAVE_GMTIME_R=1 -DHAVE_DECL_STRERROR_R=1 -DHAVE_STRERROR_R=1 -DHAVE_READLINE=1 -DHAVE_POSIX_FALLOCATE=1
AM_CXXFLAGS = -g -DDEBUG -Wall -pipe -DSQLITE_THREADSAFE=1  -DSQLITE_ENABLE_RTREE -DSQLITE_ENABLE_COLUMN_METADATA=1 -DSQLITE_DEFAULT_MEMSTATUS=0 -D_REENTRANT=1 -DHAVE_FDATASYNC=1 -DHAVE_USLEEP=1 -DHAVE_LOCALTIME_R=1 -DHAVE_GMTIME_R=1 -DHAVE_DECL_STRERROR_R=1 -DHAVE_STRERROR_R=1 -DHAVE_READLINE=1 -DHAVE_POSIX_FALLOCATE=1
else
AM_CFLAGS = -m64 -Ofast -march=native -funroll-loops -pipe -DSQLITE_THREADSAFE=1  -DSQLITE_ENABLE_RTREE -DSQLITE_ENABLE_COLUMN_METADATA=1 -DSQLITE_DEFAULT_MEMSTATUS=0 -D_REENTRANT=1 -DHAVE_FDATASYNC=1 -DHAVE_USLEEP=1 -DHAVE_LOCALTIME_R=1 -DHAVE_GMTIME_R=1 -DHAVE_DECL_STRERROR_R=1 -DHAVE_STRERROR_R=1 -DHAVE_READLINE=1 -DHAVE_POSIX_FALLOCATE=1
AM_CXXFLAGS = -m64 -Ofast -march=native -funroll-loops -pipe -DSQLITE_THREADSAFE=1  -DSQLITE_ENABLE_RTREE -DSQLITE_ENABLE_COLUMN_METADATA=1 -DSQLITE_DEFAULT_MEMSTATUS=0 -D_REENTRANT=1 -DHAVE_FDATASYNC=1 -DHAVE_USLEEP=1 -DHAVE_LOCALTIME_R=1 -DHAVE_GMTIME_R=1 -DHAVE_DECL_STRERROR_R=1 -DHAVE_STRERROR_R=1 -DHAVE_READLINE=1 -DHAVE_POSIX_FALLOCATE=1
endif

